--- a/board/spacemit/k1-x/Makefile
+++ b/board/spacemit/k1-x/Makefile
@@ -6,3 +6,4 @@ obj-y	+= k1x.o
 obj-$(CONFIG_SPL_BUILD)	+= spl.o k1x-i2c-eeprom.o k1x-tlvinfo.o
 obj-$(CONFIG_SPLASH_SOURCE) +=splash.o
 obj-$(CONFIG_ENV_IS_IN_NFS) +=nfs_env.o
+obj-$(CONFIG_SPACEMIT_SHUTDOWN_CHARGE) += show_battery.o
