--- a/board/spacemit/k1-x/k1-x.env
+++ b/board/spacemit/k1-x/k1-x.env
@@ -1,6 +1,5 @@
 // Common parameter
 earlycon=sbi
-console=ttyS0,115200
 init=/init
 bootdelay=0
 baudrate=115200
@@ -19,26 +18,31 @@ nor_rootfstype=squashfs
 mmc_rootfstype=ext4
 
 // rootfs part number must less than 99
-rootfs_part_to_ul=echo "set rootfs_part to ul"; setexpr temp_num_0 ${rootfs_part} / a;\
-                    setexpr temp_num_1 ${rootfs_part} % a;\
-                    setenv rootfs_part ${temp_num_0}${temp_num_1};
+rootfs_part_to_ul=echo "set rootfs_part to ul"; setexpr temp_num_0 ${rootfs_part} / a; \
+            setexpr temp_num_1 ${rootfs_part} % a; \
+            setenv rootfs_part ${temp_num_0}${temp_num_1};
 
 // Get "rootfs" partition number in decimal, and set var "blk_root"
 // Variable "boot_devnum" is set during board_lat_init()
 set_rootfs_env=if test "${bootfs_devname}" = mmc; then \
-                    setenv blk_root "/dev/mmcblk${boot_devnum}p${rootfs_part}"; \
-                elif test "${bootfs_devname}" = nvme; then \
-                    setenv blk_root "/dev/nvme${boot_devnum}n1p${rootfs_part}"; \
-                else echo "not define rootfs part at this blk device, add to env"; \
-                fi;
+                setenv blk_root "/dev/mmcblk${boot_devnum}p${rootfs_part}"; \
+            elif test "${bootfs_devname}" = nvme; then \
+                setenv blk_root "/dev/nvme${boot_devnum}n1p${rootfs_part}"; \
+            else \
+			    echo "not define rootfs part at this blk device, add to env"; \
+            fi;
+
 get_rootfs_env=part number ${bootfs_devname} ${boot_devnum} rootfs rootfs_part; \
-             setexpr rootfs_part ${rootfs_part} + 0; \
-             if test ${rootfs_part} > 9 ; then run rootfs_part_to_ul;fi; \
-             echo "get rootfs_part index:${rootfs_part}";
+            setexpr rootfs_part ${rootfs_part} + 0; \
+            if test ${rootfs_part} > 9; then run rootfs_part_to_ul; fi; \
+            echo "get rootfs_part index:${rootfs_part}";
 
-set_mmc_root=run get_rootfs_env; run set_rootfs_env;
+// get "rootfs" partition uuid, and set var "rootfs_uuid"
+get_rootfs_uuid=part number ${bootfs_devname} ${boot_devnum} rootfs rootfs_part; \
+            fsuuid ${bootfs_devname} ${boot_devnum}:${rootfs_part} rootfs_uuid;
 
-set_nor_root=run get_rootfs_env; run set_rootfs_env;
+set_root_arg=run get_rootfs_uuid; \
+            setenv bootargs "${bootargs}" root=UUID=${rootfs_uuid};
 
 //override here, otherwise gen random addr and save to eeprom by uboot
 //ethaddr=fe:fe:fe:22:22:01
@@ -50,6 +54,8 @@ serverip=10.0.92.148
 gatewayip=10.0.92.1
 net_data_path=net_flash_file/net_flash_file/
 mac_mapping_file=/home/it/nfs/bianbu/mac_mapping.txt
+
+//net_flash_protocol=spacemit_tftp
 
 preboot=
 ramdisk_size=-
@@ -76,51 +82,63 @@ get_esp_index=env set esp_index ${bootfs_part}; \
             part number ${bootfs_devname} ${boot_devnum} ${esp_name} esp_index;
 
 // Common boot args
-commonargs=setenv bootargs earlyprintk quiet splash plymouth.ignore-serial-consoles plymouth.prefer-fbcon clk_ignore_unused swiotlb=65536 workqueue.default_affinity_scope=${workqueue.default_affinity_scope}
+commonargs=setenv bootargs earlyprintk quiet splash plymouth.ignore-serial-consoles \
+            plymouth.prefer-fbcon clk_ignore_unused swiotlb=65536 \
+            workqueue.default_affinity_scope=${workqueue.default_affinity_scope}
+set_loglevel=if test "${loglevel}" != "";then \
+                setenv bootargs "${bootargs}" loglevel=${loglevel};
+            fi
+
+set_console=if test "${console}" != "";then \
+                setenv bootargs "${bootargs}" console=${console};
+            fi
+
+add_bootarg=run set_console; \
+            run set_loglevel;
 
 //detect product_name from env and select dtb file to load
 dtb_env=if test -n "${product_name}"; then \
-                if test "${product_name}" = k1_evb; then \
-                    setenv dtb_name ${dtb_dir}/k1-x_evb.dtb; \
-                elif test "${product_name}" = k1_deb1; then \
-                    setenv dtb_name ${dtb_dir}/k1-x_deb1.dtb; \
-                elif test "${product_name}" = k1_deb2; then \
-                    setenv dtb_name ${dtb_dir}/k1-x_deb2.dtb; \
-                elif test "${product_name}" = k1_hs450; then \
-                    setenv dtb_name ${dtb_dir}/k1-x_hs450.dtb; \
-                elif test "${product_name}" = k1_kx312; then \
-                    setenv dtb_name ${dtb_dir}/k1-x_kx312.dtb; \
-                elif test "${product_name}" = k1_mingo; then \
-                    setenv dtb_name ${dtb_dir}/k1-x_mingo.dtb; \
-                elif test "${product_name}" = k1_MINI-PC; then \
-                    setenv dtb_name ${dtb_dir}/k1-x_MINI-PC.dtb; \
-                else \
-                    echo "match dtb by product_name: ${dtb_dir}/${product_name}.dtb"; \
-                    setenv dtb_name  ${dtb_dir}/${product_name}.dtb; \
-                fi; \
-            fi;
+            if test "${product_name}" = k1_evb; then \
+                setenv dtb_name ${dtb_dir}/k1-x_evb.dtb; \
+            elif test "${product_name}" = k1_deb1; then \
+                setenv dtb_name ${dtb_dir}/k1-x_deb1.dtb; \
+            elif test "${product_name}" = k1_deb2; then \
+                setenv dtb_name ${dtb_dir}/k1-x_deb2.dtb; \
+            elif test "${product_name}" = k1_hs450; then \
+                setenv dtb_name ${dtb_dir}/k1-x_hs450.dtb; \
+            elif test "${product_name}" = k1_kx312; then \
+                setenv dtb_name ${dtb_dir}/k1-x_kx312.dtb; \
+            elif test "${product_name}" = k1_mingo; then \
+                setenv dtb_name ${dtb_dir}/k1-x_mingo.dtb; \
+            elif test "${product_name}" = k1_MINI-PC; then \
+                setenv dtb_name ${dtb_dir}/k1-x_MINI-PC.dtb; \
+            else \
+                echo "match dtb by product_name: ${dtb_dir}/${product_name}.dtb"; \
+                setenv dtb_name  ${dtb_dir}/${product_name}.dtb; \
+            fi; \
+        fi;
 
 detect_dtb=echo "product_name: ${product_name}"; run dtb_env; echo "select ${dtb_name} to load";
 
 loadknl=echo "Loading kernel..."; \
-            load ${bootfs_devname} ${boot_devnum}:${bootfs_part} ${kernel_addr_r} ${knl_name};
+        load ${bootfs_devname} ${boot_devnum}:${bootfs_part} ${kernel_addr_r} ${knl_name};
 
 loadramdisk=echo "Loading ramdisk ..."; \
-            if load ${bootfs_devname} ${boot_devnum}:${bootfs_part} ${ramdisk_addr} ${ramdisk_name}; then \
-                size ${bootfs_devname} ${boot_devnum}:${bootfs_part} ${ramdisk_name}; \
-                setenv ramdisk_size ${filesize}; \
-                setenv ramdisk_combo ${ramdisk_addr}:${ramdisk_size}; \
-            else \
-                echo "load ramdisk from bootfs fail, use built-in ramdisk"; \
-                setenv ramdisk_addr -; \
-            fi;
+        if load ${bootfs_devname} ${boot_devnum}:${bootfs_part} ${ramdisk_addr} ${ramdisk_name}; then \
+            size ${bootfs_devname} ${boot_devnum}:${bootfs_part} ${ramdisk_name}; \
+            setenv ramdisk_size ${filesize}; \
+            setenv ramdisk_combo ${ramdisk_addr}:${ramdisk_size}; \
+        else \
+            echo "load ramdisk from bootfs fail, use built-in ramdisk"; \
+            setenv ramdisk_addr -; \
+        fi;
 
 loaddtb=echo "Loading dtb..."; \
-            if load ${bootfs_devname} ${boot_devnum}:${bootfs_part} ${dtb_addr} ${dtb_name}; then \
-            else \
-                echo "load dtb from bootfs fail, use built-in dtb"; \
-                setenv dtb_addr ""; \
-            fi;
+        if load ${bootfs_devname} ${boot_devnum}:${bootfs_part} ${dtb_addr} ${dtb_name}; then \
+        else \
+            echo "load dtb from bootfs fail, use built-in dtb"; \
+            setenv dtb_addr ""; \
+        fi;
 
 load_grub=echo "Loading grub..."; \
             load ${bootfs_devname} ${boot_devnum}:${esp_index} ${kernel_addr_r} ${grub_file};
@@ -133,7 +151,8 @@ start_kernel=fdt addr ${kernel_addr_r}; \
             booti ${kernel_addr_r} ${ramdisk_combo} ${dtb_addr}; \
         fi;
 
-boot_kernel=run detect_dtb; \
+boot_kernel=run set_root_arg; \
+        run detect_dtb; \
         run loadknl; \
         run loaddtb; \
         run loadramdisk; \
@@ -146,10 +165,10 @@ boot_grub=env set -e -bs product_name "${product_name}"; \
         bootefi ${kernel_addr_r};
 
 // Nor+ssd boot combo
-set_nor_args=setenv bootargs "${bootargs}" mtdparts=${mtdparts} root=${blk_root} rootfstype=ext4
+set_nor_args=setenv bootargs "${bootargs}" mtdparts=${mtdparts} rootfstype=ext4
 nor_boot=echo "Try to boot from ${bootfs_devname}${boot_devnum} ..."; \
         run commonargs; \
-        run set_nor_root; \
+        run add_bootarg; \
         run set_nor_args; \
         run get_esp_index; \
         if test -e ${bootfs_devname} ${boot_devnum}:${esp_index} ${grub_file}; then \
@@ -162,11 +181,11 @@ nor_boot=echo "Try to boot from ${bootfs_devname}${boot_devnum} ..."; \
 //##############################################################################
 // eMMC/SDCard boot
 //##############################################################################
-set_mmc_args=setenv bootargs "${bootargs}" root=${blk_root} rootwait rootfstype=${mmc_rootfstype};
+set_mmc_args=setenv bootargs "${bootargs}" rootwait rootfstype=${mmc_rootfstype};
 
 mmc_boot=echo "Try to boot from ${bootfs_devname}${boot_devnum} ..."; \
         run commonargs; \
-        run set_mmc_root; \
+        run add_bootarg; \
         run set_mmc_args; \
         run get_esp_index; \
         if test -e ${bootfs_devname} ${boot_devnum}:${esp_index} ${grub_file}; then \
@@ -178,6 +197,7 @@ mmc_boot=echo "Try to boot from ${bootfs_devname}${boot_devnum} ..."; \
 
 nfs_boot=echo "Try to boot from NFS ..."; \
         run commonargs; \
+        run add_bootarg; \
         setenv bootargs "${bootargs}" root=/dev/nfs nfsroot=${serverip}:${rootfs_path} bootfs=${serverip}:${bootfs_path} ip=${ipaddr}:${serverip}:${gatewayip}:${netmask}::${netdev}:off noipath; \
         echo "bootargs: ${bootargs}"; \
         run detect_dtb; \
