--- a/configs/k1_defconfig
+++ b/configs/k1_defconfig
@@ -1,6 +1,6 @@
 CONFIG_RISCV=y
 CONFIG_SYS_TEXT_BASE=0x00200000
-CONFIG_SYS_MALLOC_LEN=0x1000000
+CONFIG_SYS_MALLOC_LEN=0x2000000
 CONFIG_NR_DRAM_BANKS=2
 CONFIG_ENV_SIZE=0x4000
 CONFIG_ENV_OFFSET=0x60000
@@ -113,6 +113,7 @@ CONFIG_CMD_TIMER=y
 CONFIG_CMD_SYSBOOT=y
 CONFIG_CMD_EXT4_WRITE=y
 CONFIG_CMD_SQUASHFS=y
+CONFIG_CMD_FS_UUID=y
 CONFIG_CMD_JFFS2=y
 CONFIG_JFFS2_MTDPARTS=y
 CONFIG_JFFS2_PART_OFFSET=0x700000
@@ -141,6 +142,7 @@ CONFIG_PROT_UDP=y
 CONFIG_NET_RANDOM_ETHADDR=y
 CONFIG_IP_DEFRAG=y
 CONFIG_NET_MAXDEFRAG=65535
+CONFIG_TFTP_BLOCKSIZE=32768
 CONFIG_KEEP_SERVERADDR=y
 CONFIG_BOOTP_SERVERIP=y
 CONFIG_REGMAP=y
@@ -250,6 +252,7 @@ CONFIG_USB_EHCI_K1X=y
 CONFIG_USB_DWC3=y
 # CONFIG_USB_DWC3_GADGET is not set
 CONFIG_USB_DWC3_GENERIC=y
+CONFIG_TYPEC_HUSB239=y
 CONFIG_USB_STORAGE=y
 CONFIG_USB_KEYBOARD=y
 CONFIG_SYS_USB_EVENT_POLL_COMPATIBLE=y
