--- a/configs/k1_defconfig
+++ b/configs/k1_defconfig
@@ -1,6 +1,6 @@
 CONFIG_RISCV=y
 CONFIG_SYS_TEXT_BASE=0x00200000
-CONFIG_SYS_MALLOC_LEN=0x2000000
+CONFIG_SYS_MALLOC_LEN=0x1000000
 CONFIG_NR_DRAM_BANKS=2
 CONFIG_ENV_SIZE=0x4000
 CONFIG_ENV_OFFSET=0x60000
@@ -10,6 +10,7 @@ CONFIG_DEFAULT_DEVICE_TREE="k1-x_spl"
 CONFIG_SPL_TEXT_BASE=0xC0801000
 CONFIG_SPL_MMC=y
 CONFIG_SPL_DRIVERS_MISC=y
+CONFIG_SPL_SYS_MALLOC_F_LEN=0x5000
 CONFIG_SPL_SIZE_LIMIT=0x31000
 CONFIG_SPL=y
 CONFIG_SPL_SPI_FLASH_SUPPORT=y
@@ -83,6 +84,7 @@ CONFIG_SYS_CBSIZE=256
 CONFIG_SYS_PBSIZE=276
 # CONFIG_CMD_CPU is not set
 CONFIG_CMD_TLV_EEPROM=y
+CONFIG_CMD_TLV_CUSTOM=y
 CONFIG_SYS_BOOTM_LEN=0x10000000
 CONFIG_CMD_NVEDIT_EFI=y
 CONFIG_CMD_EEPROM=y
@@ -169,9 +171,7 @@ CONFIG_FASTBOOT_CMD_OEM_READ=y
 CONFIG_FASTBOOT_SUPPORT_BLOCK_DEV=y
 CONFIG_FASTBOOT_SUPPORT_SECOND_BLOCK_DEV=y
 CONFIG_FASTBOOT_CMD_OEM_CONFIG_ACCESS=y
-CONFIG_SPL_FASTBOOT_CMD_OEM_CONFIG_ACCESS=y
 CONFIG_FASTBOOT_CMD_OEM_ERASE=y
-CONFIG_SPL_FASTBOOT_CMD_OEM_ERASE=y
 CONFIG_FASTBOOT_CMD_OEM_ENV_ACCESS=y
 CONFIG_SPL_FASTBOOT_CMD_OEM_ENV_ACCESS=y
 CONFIG_K1X_GPIO=y
@@ -277,6 +277,7 @@ CONFIG_VIDEO_SPACEMIT=y
 CONFIG_DISPLAY_SPACEMIT_HDMI=y
 CONFIG_DISPLAY_SPACEMIT_MIPI=y
 CONFIG_DISPLAY_SPACEMIT_EDP=y
+CONFIG_DISPLAY_SPACEMIT_DPI=y
 CONFIG_WDT_SPACEMIT=y
 CONFIG_WDT_PMIC_SPACEMIT=y
 CONFIG_JFFS2_NOR=y
