--- a/arch/riscv/dts/k1-x_InnoBoard-Pi.dts
+++ b/arch/riscv/dts/k1-x_InnoBoard-Pi.dts
@@ -6,11 +6,9 @@
 #include "k1-x.dtsi"
 #include "k1-x_pinctrl.dtsi"
 #include "k1-x_spm8821.dtsi"
-#include <dt-bindings/input/input.h>
-#include <dt-bindings/usb/pd.h>
 
 / {
-	model = "M1-MUSE-PAPER";
+	model = "spacemit k1-x InnoBoard-Pi board";
 
 	aliases {
 		efuse_power = &ldo_31;
@@ -29,33 +27,13 @@
 	usb2hub: usb2hub {
 		compatible = "spacemit,usb-hub";
 		vbus-gpios = <&gpio 123 0>;	/* for usb2 hub output vbus */
-		status = "disabled";
+		status = "okay";
 	};
 
 	usb3hub: usb3hub {
 		compatible = "spacemit,usb-hub";
 		vbus-gpios = <&gpio 79 0>;	/* gpio_79 for usb3 pwren */
-		status = "disabled";
-	};
-
-	gpio_keys: gpio_keys {
-		compatible = "gpio-keys";
-		fastboot-key-combo = "volume-up";
-		fastboot-key-press-time = <2000>; /* in milliseconds */
-
-		volume-up-button {
-			label = "volume-up";
-			linux,code = <KEY_VOLUMEUP>;
-			gpios = <&gpio 70 1>;
-			debounce-interval = <10>;
-		};
-
-		volume-down-button {
-			label = "volume-down";
-			linux,code = <KEY_VOLUMEDOWN>;
-			gpios = <&gpio 71 1>;
-			debounce-interval = <10>;
-		};
+		status = "okay";
 	};
 
 };
@@ -96,92 +74,20 @@
 };
 
 &i2c4 {
-	#address-cells = <1>;
-	#size-cells = <0>;
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_i2c4_2>;
+	clock-frequency = <400000>;
 	status = "okay";
-
-	husb239_u2: tcpc@62 {
-		compatible = "hynetek,husb239";
-		reg = <0x62>;
-		status = "okay";
-
-		connector {
-			compatible = "usb-c-connector";
-			label = "USB-C";
-			sink-pdos = <PDO_VAR(5000, 9000, 2000)>;
-		};
-	};
-
-	husb239_u3: tcpc@42 {
-		compatible = "hynetek,husb239";
-		reg = <0x42>;
-		status = "okay";
-
-		connector {
-			compatible = "usb-c-connector";
-			label = "USB-C";
-			sink-pdos = <PDO_VAR(5000, 9000, 2000)>;
-		};
-	};
 };
 
 &i2c5 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_i2c5_0>;
 	status = "disabled";
 };
 
 &i2c6 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_i2c6_0>;
-	status = "okay";
-	secsgm41515: sgm41515-2 {
-		compatible = "spacemit,sgm41515";
-		reg = <0x1a>;
-		ch-en-gpios = <&gpio 46 0>;
-		nqon-gpios = <&gpio 43 0>;
-
-		sgm41515-ichrg-uA = <1000000>;
-		sgm41515-vchrg-uV = <4350000>;
-		sgm41515-cur-input-uA = <2000000>;
-		status = "okay";
-	};
+	status = "disabled";
 };
 
 &i2c7 {
 	status = "disabled";
-};
-
-&i2c8 {
-	cw2015: cw2015@62 {
-		compatible = "spacemit,cw2015";
-		reg = <0x62>;
-		cellwise,battery-profile = /bits/ 8 <
-			0x17 0x67 0x73 0x69 0x68 0x65 0x64 0x55
-			0x75 0x60 0x4A 0x57 0x57 0x4E 0x42 0x3A
-			0x30 0x28 0x23 0x1E 0x23 0x35 0x46 0x4D
-			0x14 0x86 0x06 0x66 0x25 0x45 0x51 0x63
-			0x72 0x69 0x66 0x6B 0x3F 0x1B 0x78 0x39
-			0x0A 0x2F 0x1A 0x46 0x88 0x94 0x9B 0x12
-			0x3B 0x5F 0x9A 0xB6 0x80 0x57 0x7F 0xCB
-			0x2F 0x00 0x64 0xA5 0xB5 0xC1 0x46 0xAE
-		>;
-		status = "okay";
-	};
-
-	sgm41515: sgm41515 {
-		compatible = "spacemit,sgm41515";
-		reg = <0x1a>;
-		ch-en-gpios = <&gpio 117 0>;
-		nqon-gpios = <&gpio 115 0>;
-
-		sgm41515-ichrg-uA = <1000000>;
-		sgm41515-vchrg-uV = <4350000>;
-		sgm41515-cur-input-uA = <2000000>;
-		status = "okay";
-	};
 };
 
 &pinctrl {
@@ -210,14 +116,9 @@
 		&range GPIO_125 3 (MUX_MODE0 | EDGE_NONE | PULL_DOWN | PAD_1V8_DS2)
 	>;
 
-	pinctrl_mmc1_debug: mmc1_debug_grp {
-		pinctrl-single,pins = <
-			K1X_PADCONF(MMC1_DAT3, MUX_MODE3, (EDGE_NONE | PULL_UP   | PAD_3V_DS4))	/* uart0_txd */
-			K1X_PADCONF(MMC1_DAT2, MUX_MODE3, (EDGE_NONE | PULL_UP   | PAD_3V_DS4))	/* uart0_rxd */
-			K1X_PADCONF(MMC1_DAT1, MUX_MODE0, (EDGE_NONE | PULL_UP   | PAD_3V_DS4))	/* mmc1_d1 */
-			K1X_PADCONF(MMC1_DAT0, MUX_MODE0, (EDGE_NONE | PULL_UP   | PAD_3V_DS4))	/* mmc1_d0 */
-			K1X_PADCONF(MMC1_CMD,  MUX_MODE0, (EDGE_NONE | PULL_UP   | PAD_3V_DS4))	/* mmc1_cmd */
-			K1X_PADCONF(MMC1_CLK,  MUX_MODE0, (EDGE_NONE | PULL_DOWN | PAD_3V_DS4))	/* mmc1_clk */
+	usbp1_vbus: usbp1_vbus {
+		pinctrl-single,pins =<
+			K1X_PADCONF(GPIO_66, MUX_MODE0, (EDGE_NONE | PULL_UP | PAD_1V8_DS2))    /* drive_vbus1_iso */
 		>;
 	};
 };
@@ -241,29 +142,29 @@
 };
 
 &udc {
-	status = "disabled";
+	status = "okay";
 };
 
 &usbphy1 {
-	status = "disabled";
+	status = "okay";
 };
 
 &ehci1 {
 	vbus-supply = <&usb2hub>;
-	status = "disabled";
+	status = "okay";
 };
 
 &usb2phy {
-	status = "disabled";
+	status = "okay";
 };
 
 &combphy {
-	status = "disabled";
+	status = "okay";
 };
 
 
 &usbdrd3 {
-	status = "disabled";
+	status = "okay";
 	vbus-supply = <&usb3hub>;
 	dwc3@c0a00000 {
 		dr_mode = "host";
@@ -277,12 +178,12 @@
 };
 
 &sdhci0 {
-	pinctrl-names = "default","fast","debug";
+	pinctrl-names = "default","fast";
 	pinctrl-0 = <&pinctrl_mmc1>;
 	pinctrl-1 = <&pinctrl_mmc1_fast>;
-	pinctrl-2 = <&pinctrl_mmc1_debug>;
 	bus-width = <4>;
 	cd-gpios = <&gpio 80 0>;
+	cd-inverted;
 	vmmc-supply = <&dcdc_9>;
 	vqmmc-supply = <&ldo_23>;
 	spacemit,aib_mmc1_io_reg = <0xD401E81C>;
@@ -290,7 +191,7 @@
 	spacemit,apbc_assar_reg = <0xD4015054>;
 	spacemit,rx_dline_reg = <0x0>;
 	spacemit,tx_dline_reg = <0x0>;
-	spacemit,tx_delaycode = <0x7f>;
+	spacemit,tx_delaycode = <0x9f>;
 	spacemit,rx_tuning_limit = <50>;
 	sdh-phy-module = <0>;
 	clk-src-freq = <204800000>;
@@ -305,6 +206,45 @@
 	mmc-hs400-enhanced-strobe;
 	sdh-phy-module = <1>;
 	clk-src-freq = <375000000>;
+	status = "okay";
+};
+
+&eth0 {
+	status = "okay";
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_gmac0>;
+
+	phy-reset-pin = <110>;
+
+	clk_tuning_enable;
+	clk-tuning-by-delayline;
+	tx-phase = <90>;
+	rx-phase = <73>;
+
+	phy-mode = "rgmii";
+	phy-addr = <1>;
+	phy-handle = <&rgmii>;
+
+	ref-clock-from-phy;
+
+	mdio {
+		#address-cells = <0x1>;
+		#size-cells = <0x0>;
+		rgmii: phy@0 {
+			compatible = "ethernet-phy-id001c.c916";
+			device_type = "ethernet-phy";
+			reg = <0x1>;
+		};
+	};
+};
+
+&pcie0_rc {
+	status = "disabled";
+};
+
+&pcie1_rc {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_pcie1_3>;
 	status = "okay";
 };
 
@@ -331,77 +271,32 @@
 	status = "okay";
 };
 
-&ldo_27 {
-	regulator-init-microvolt = <1200000>;
-	regulator-boot-on;
-	regulator-state-mem {
-			regulator-off-in-suspend;
-	};
-};
-
-&ldo_33 {
-	regulator-init-microvolt = <1800000>;
-	regulator-boot-on;
-	regulator-state-mem {
-			regulator-off-in-suspend;
-	};
+&hdmi {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_hdmi_0>;
+	status = "okay";
 };
 
 &pwm14 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm14_1>;
-	status = "okay";
+	status = "disabled";
 };
 
 &backlight {
 	pwms = <&pwm14 0 2000>;
-	default-brightness-level = <4>;
-	status = "okay";
+	default-brightness-level = <6>;
+	status = "disabled";
 };
 
 &mipi_dsi {
-	status = "okay";
+	status = "disabled";
 };
 
 &panel {
-	force-attached = "icnl9951r";
-	dcp-gpios = <&gpio 34 0>;
-	dcn-gpios = <&gpio 42 0>;
-	avee-gpios = <&gpio 35 0>;
-	avdd-gpios = <&gpio 36 0>;
+	dcp-gpios = <&gpio 82 0>;
+	dcn-gpios = <&gpio 83 0>;
 	backlight = <&backlight>;
-	enable-gpios = <&gpio 31 0>;
-	reset-gpios = <&gpio 30 0>;
-	status = "okay";
-};
-
-&shutdown_charging {
-	electricity-meter = <&cw2015>;
-	power-domains = <&pmu K1X_PMU_WKUP_EVENT_PWR_DOMAIN>;
-
-	wk-name = "pwr_event", "pwr_int", "rtc_ctrl", "rtc_event", "rtc_irq", "sys-shutdown", "reboot-flag";
-	pwr_event = <&power_event>;
-	pwr_int = <&power_int>;
-
-	rtc_ctrl = <&rtc_ctrl>;
-	rtc_event = <&rtc_event>;
-	rtc_irq = <&rtc_irq>;
-
-	sys-shutdown = <&power_down>;
-	reboot-flag = <&reboot_flag>;
-
-	charge-light = <&gpio 75 0 &gpio 76 0>;
-	valid-level = <1>;
-
-	backlight = <&backlight>;
-
-	charger-name = "charger0", "charger1";
-	charger0 = <&sgm41515>;
-	charger1 = <&secsgm41515>;
-
-	battery-threshold0 = <3>;
-	battery-threshold1 = <5>;
-	battery-threshold2 = <100>;
-
-	status = "okay";
+	reset-gpios = <&gpio 81 0>;
+	status = "disabled";
 };
