--- a/arch/riscv/dts/k1-x_LX-V10.dts
+++ b/arch/riscv/dts/k1-x_LX-V10.dts
@@ -6,10 +6,9 @@
 #include "k1-x.dtsi"
 #include "k1-x_pinctrl.dtsi"
 #include "k1-x_spm8821.dtsi"
-#include <dt-bindings/usb/pd.h>
 
 / {
-	model = "MUSE-PAPER-MINI-4G";
+	model = "spacemit k1-x LX-V10 board";
 
 	aliases {
 		efuse_power = &ldo_31;
@@ -24,19 +23,6 @@
 		bootargs = "earlycon=sbi console=ttyS0,115200 debug loglevel=8,initcall_debug=1 rdinit=/init.tmp";
 		stdout-path = "serial0:115200n8";
 	};
-
-	usb2hub: usb2hub {
-		compatible = "spacemit,usb-hub";
-		vbus-gpios = <&gpio 123 0>;	/* for usb2 hub output vbus */
-		status = "disabled";
-	};
-
-	usb3hub: usb3hub {
-		compatible = "spacemit,usb-hub";
-		vbus-gpios = <&gpio 79 0>;	/* gpio_79 for usb3 pwren */
-		status = "disabled";
-	};
-
 };
 
 &cpus {
@@ -75,27 +61,10 @@
 };
 
 &i2c4 {
-	clock-frequency = <400000>;
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_i2c4_2>;
-	status = "okay";
-
-	husb239_u2: tcpc@42 {
-		compatible = "hynetek,husb239";
-		reg = <0x42>;
-		status = "okay";
-
-		connector {
-			compatible = "usb-c-connector";
-			label = "USB-C";
-			sink-pdos = <PDO_VAR(5000, 9000, 2000)>;
-		};
-	};
+	status = "disabled";
 };
 
 &i2c5 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_i2c5_0>;
 	status = "disabled";
 };
 
@@ -111,8 +80,7 @@
 	pinctrl-single,gpio-range = <
 		&range GPIO_49  2 (MUX_MODE0 | EDGE_NONE | PULL_UP   | PAD_3V_DS4)
 		&range GPIO_58  1 (MUX_MODE0 | EDGE_NONE | PULL_DOWN | PAD_1V8_DS2)
-		&range GPIO_63  1 (MUX_MODE0 | EDGE_NONE | PULL_DOWN | PAD_1V8_DS2)
-		&range GPIO_64  1 (MUX_MODE1 | EDGE_NONE | PULL_DOWN | PAD_1V8_DS2)
+		&range GPIO_63  2 (MUX_MODE0 | EDGE_NONE | PULL_DOWN | PAD_1V8_DS2)
 		&range GPIO_65  1 (MUX_MODE0 | EDGE_NONE | PULL_UP   | PAD_1V8_DS2)
 		&range GPIO_66  2 (MUX_MODE0 | EDGE_NONE | PULL_DOWN | PAD_1V8_DS2)
 		&range PRI_TDI  2 (MUX_MODE1 | EDGE_NONE | PULL_UP   | PAD_1V8_DS2)
@@ -124,88 +92,54 @@
 		&range GPIO_81  3 (MUX_MODE0 | EDGE_NONE | PULL_UP   | PAD_1V8_DS2)
 		&range GPIO_90  1 (MUX_MODE0 | EDGE_NONE | PULL_DOWN | PAD_1V8_DS2)
 		&range GPIO_91  2 (MUX_MODE0 | EDGE_NONE | PULL_UP   | PAD_1V8_DS2)
-		&range DVL0     2 (MUX_MODE1 | EDGE_NONE | PULL_DOWN | PAD_1V8_DS2)
+		&range DVL0     1 (MUX_MODE1 | EDGE_NONE | PULL_DOWN | PAD_1V8_DS2)
+		&range DVL1     1 (MUX_MODE1 | EDGE_NONE | PULL_DOWN | PAD_1V8_DS0)
 		&range GPIO_110 1 (MUX_MODE0 | EDGE_NONE | PULL_DOWN | PAD_1V8_DS2)
 		&range GPIO_114 1 (MUX_MODE0 | EDGE_NONE | PULL_DOWN | PAD_1V8_DS2)
 		&range GPIO_115 2 (MUX_MODE0 | EDGE_NONE | PULL_DOWN | PAD_1V8_DS2)
-		&range GPIO_123 1 (MUX_MODE0 | EDGE_NONE | PULL_DOWN | PAD_1V8_DS2)
+		&range GPIO_123 1 (MUX_MODE0 | EDGE_NONE | PULL_DOWN | PAD_1V8_DS0)
 		&range GPIO_124 1 (MUX_MODE0 | EDGE_NONE | PULL_UP   | PAD_1V8_DS2)
 		&range GPIO_125 3 (MUX_MODE0 | EDGE_NONE | PULL_DOWN | PAD_1V8_DS2)
 	>;
 
-	pinctrl_mmc1_debug: mmc1_debug_grp {
-		pinctrl-single,pins = <
-			K1X_PADCONF(MMC1_DAT3, MUX_MODE3, (EDGE_NONE | PULL_UP   | PAD_3V_DS4))	/* uart0_txd */
-			K1X_PADCONF(MMC1_DAT2, MUX_MODE3, (EDGE_NONE | PULL_UP   | PAD_3V_DS4))	/* uart0_rxd */
-			K1X_PADCONF(MMC1_DAT1, MUX_MODE0, (EDGE_NONE | PULL_UP   | PAD_3V_DS4))	/* mmc1_d1 */
-			K1X_PADCONF(MMC1_DAT0, MUX_MODE0, (EDGE_NONE | PULL_UP   | PAD_3V_DS4))	/* mmc1_d0 */
-			K1X_PADCONF(MMC1_CMD,  MUX_MODE0, (EDGE_NONE | PULL_UP   | PAD_3V_DS4))	/* mmc1_cmd */
-			K1X_PADCONF(MMC1_CLK,  MUX_MODE0, (EDGE_NONE | PULL_DOWN | PAD_3V_DS4))	/* mmc1_clk */
-		>;
-	};
 };
 
 &gpio{
 	gpio-ranges = <
 		&pinctrl 49 GPIO_49 2
 		&pinctrl 58 GPIO_58 1
-		&pinctrl 63 GPIO_63 1
-		&pinctrl 65 GPIO_65 3
+		&pinctrl 63 GPIO_63 5
 		&pinctrl 70 PRI_TDI 4
 		&pinctrl 74 GPIO_74 1
-		&pinctrl 79 GPIO_79 1
-		&pinctrl 80 GPIO_80 4
+		&pinctrl 79 GPIO_79 5
 		&pinctrl 90 GPIO_90 3
 		&pinctrl 96 DVL0 2
 		&pinctrl 110 GPIO_110 1
 		&pinctrl 114 GPIO_114 3
 		&pinctrl 123 GPIO_123 5
 	>;
+
 };
 
 &udc {
-	status = "disabled";
-};
-
-&usbphy1 {
-	status = "disabled";
-};
-
-&ehci1 {
-	vbus-supply = <&usb2hub>;
-	status = "disabled";
+	status = "okay";
 };
 
 &usb2phy {
-	status = "disabled";
+	status = "okay";
 };
 
 &combphy {
-	status = "disabled";
-};
-
-
-&usbdrd3 {
-	status = "disabled";
-	vbus-supply = <&usb3hub>;
-	dwc3@c0a00000 {
-		dr_mode = "host";
-		phy_type = "utmi";
-		snps,dis_enblslpm_quirk;
-		snps,dis_u2_susphy_quirk;
-		snps,dis_u3_susphy_quirk;
-		snps,dis-del-phy-power-chg-quirk;
-		snps,dis-tx-ipgap-linecheck-quirk;
-	};
+	status = "okay";
 };
 
 &sdhci0 {
-	pinctrl-names = "default","fast","debug";
+	pinctrl-names = "default","fast";
 	pinctrl-0 = <&pinctrl_mmc1>;
 	pinctrl-1 = <&pinctrl_mmc1_fast>;
-	pinctrl-2 = <&pinctrl_mmc1_debug>;
 	bus-width = <4>;
 	cd-gpios = <&gpio 80 0>;
+	cd-inverted;
 	vmmc-supply = <&dcdc_9>;
 	vqmmc-supply = <&ldo_23>;
 	spacemit,aib_mmc1_io_reg = <0xD401E81C>;
@@ -213,11 +147,12 @@
 	spacemit,apbc_assar_reg = <0xD4015054>;
 	spacemit,rx_dline_reg = <0x0>;
 	spacemit,tx_dline_reg = <0x0>;
-	spacemit,tx_delaycode = <0x7f>;
+	spacemit,tx_delaycode = <0x5f>;
 	spacemit,rx_tuning_limit = <50>;
 	sdh-phy-module = <0>;
 	clk-src-freq = <204800000>;
-	status = "okay";
+	status = "disabled";
+
 };
 
 /* eMMC */
@@ -231,8 +166,47 @@
 	status = "okay";
 };
 
-&qspi {
+&eth0 {
 	status = "okay";
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_gmac0>;
+
+	phy-reset-pin = <81>;
+
+	clk_tuning_enable;
+	clk-tuning-by-delayline;
+	tx-phase = <90>;
+	rx-phase = <73>;
+
+	phy-mode = "rgmii";
+	phy-addr = <1>;
+	phy-handle = <&rgmii>;
+
+	ref-clock-from-phy;
+
+	mdio {
+		#address-cells = <0x1>;
+		#size-cells = <0x0>;
+		rgmii: phy@0 {
+			compatible = "ethernet-phy-id001c.c916";
+			device_type = "ethernet-phy";
+			reg = <0x1>;
+		};
+	};
+};
+
+&pcie0_rc {
+	status = "disabled";
+};
+
+&pcie1_rc {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_pcie1_3>;
+	status = "okay";
+};
+
+&qspi {
+	status = "disabled";
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_qspi>;
 
@@ -250,52 +224,28 @@
 	status = "okay";
 };
 
-&ldo_27 {
-	regulator-init-microvolt = <1200000>;
-	regulator-boot-on;
-	regulator-state-mem {
-			regulator-off-in-suspend;
-	};
-};
-
-&ldo_33 {
-	regulator-init-microvolt = <1800000>;
-	regulator-boot-on;
-	regulator-state-mem {
-			regulator-off-in-suspend;
-	};
-};
-
 &dpu {
 	status = "okay";
 };
 
-&pwm14 {
+&hdmi {
 	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_pwm14_1>;
+	pinctrl-0 = <&pinctrl_hdmi_0>;
 	status = "okay";
+};
+
+&pwm14 {
+	status = "disabled";
 };
 
 &backlight {
-	pwms = <&pwm14 0 2000>;
-	default-brightness-level = <6>;
-	status = "okay";
+	status = "disabled";
 };
 
 &mipi_dsi {
-	bit-clk = <500000000>;
-	pix-clk = <70000000>;
-	status = "okay";
+	status = "disabled";
 };
 
 &panel {
-	force-attached = "jd9365dah3";
-	dcp-gpios = <&gpio 34 0>;
-	dcn-gpios = <&gpio 42 0>;
-	avee-gpios = <&gpio 35 0>;
-	avdd-gpios = <&gpio 36 0>;
-	backlight = <&backlight>;
-	enable-gpios = <&gpio 31 0>;
-	reset-gpios = <&gpio 30 0>;
-	status = "okay";
+	status = "disabled";
 };
