--- a/board/spacemit/k1-x/Makefile
+++ b/board/spacemit/k1-x/Makefile
@@ -2,8 +2,9 @@
 #
 # Copyright (c) 2022-2023 Spacemit, Inc
 
-obj-y	+= k1x.o
-obj-$(CONFIG_SPL_BUILD)	+= spl.o k1x-i2c-eeprom.o k1x-tlvinfo.o
+obj-y	+= k1x.o k1x-tlvinfo.o
+obj-$(CONFIG_$(SPL_)CMD_TLV_CUSTOM)	+= tlv_custom.o
+obj-$(CONFIG_SPL_BUILD)	+= spl.o k1x-i2c-eeprom.o
 obj-$(CONFIG_SPLASH_SOURCE) +=splash.o
 obj-$(CONFIG_ENV_IS_IN_NFS) +=nfs_env.o
 obj-$(CONFIG_SPACEMIT_SHUTDOWN_CHARGE) += show_battery.o
