--- a/drivers/video/spacemit/Makefile
+++ b/drivers/video/spacemit/Makefile
@@ -6,5 +6,6 @@ obj-y += spacemit_dpu.o
 obj-$(CONFIG_DISPLAY_SPACEMIT_HDMI) += spacemit_hdmi.o
 obj-$(CONFIG_DISPLAY_SPACEMIT_MIPI) += spacemit_mipi.o
 obj-$(CONFIG_DISPLAY_SPACEMIT_EDP) += spacemit_edp.o
+obj-$(CONFIG_DISPLAY_SPACEMIT_DPI) += spacemit_dpi.o
 
 endif
