--- a/board/spacemit/k1-x/k1-x.env
+++ b/board/spacemit/k1-x/k1-x.env
@@ -17,6 +17,14 @@ nor_rootfstype=squashfs
 // eMMC/SDCard rootfs device
 mmc_rootfstype=ext4
 
+// NAND UBI rootfs device
+nand_rootfstype=ubifs
+nand_ubi_mtd=6
+nand_ubi_dev=0
+nand_ubi_bootfs_vol=bootfs
+nand_ubi_rootfs_vol=rootfs
+nand_mtd_name=user
+
 // rootfs part number must less than 99
 rootfs_part_to_ul=echo "set rootfs_part to ul"; setexpr temp_num_0 ${rootfs_part} / a; \
             setexpr temp_num_1 ${rootfs_part} % a; \
@@ -179,6 +187,66 @@ nor_boot=echo "Try to boot from ${bootfs_devname}${boot_devnum} ..."; \
         echo "########### boot failed by default config, check your boot config #############"
 
 //##############################################################################
+# spinand_ubifs boot
+fastboot_ubi_size=16
+ubifs_list= mtd list; \
+             ubifsls;
+ubifs_loadimg=echo "Loading kernel image..."; \
+             if ubifsload ${kernel_addr_r} Image.itb; then \
+                 echo "Loaded Image.itb successfully"; \
+                 setenv boot_cmd "bootm"; \
+             elif ubifsload ${kernel_addr_r} Image; then \
+                 echo "Loaded Image successfully"; \
+                 setenv boot_cmd "booti"; \
+             else \
+                 echo "Failed to load kernel image"; \
+                 setenv boot_cmd ""; \
+             fi;
+
+ubifs_boot=echo "Trying to boot from UBIFS..."; \
+           run ubifs_loadimg; \
+           if test -n "${boot_cmd}"; then \
+               ${boot_cmd} ${kernel_addr_r}; \
+           else \
+               echo "No valid kernel image found"; \
+           fi;
+
+# Nand boot
+set_nand_args=setenv bootargs "${bootargs}" mtdparts=${mtdparts} root=ubi${nand_ubi_dev}:${nand_ubi_rootfs_vol} rootfstype=${nand_rootfstype} ubi.mtd=${nand_ubi_mtd};
+
+nand_boot=echo "Try to boot from nand flash..."; \
+          run commonargs; \
+          run add_bootarg; \
+          run set_nand_args; \
+          echo "bootargs: ${bootargs}"; \
+          run detect_dtb; \
+          run ubifs_list; \
+          run ubifs_loadimg; \
+          if test -n "${boot_cmd}"; then \
+              if test "${boot_cmd}" = "bootm"; then \
+                  echo "Booting FIT image with embedded DTB and ramdisk..."; \
+                  ${boot_cmd} ${kernel_addr_r}; \
+              else \
+                  echo "Loading separate DTB and ramdisk for raw kernel..."; \
+                  if test -e ${dtb_name}; then \
+                      echo "Loading dtb from UBIFS..."; \
+                      ubifsload ${dtb_addr} ${dtb_name}; \
+                  fi; \
+                  if test -e ${ramdisk_name}; then \
+                      echo "Loading ramdisk from UBIFS..."; \
+                      ubifsload ${ramdisk_addr} ${ramdisk_name}; \
+                      setenv ramdisk_size ${filesize}; \
+                      setenv ramdisk_combo ${ramdisk_addr}:${ramdisk_size}; \
+                  else \
+                      setenv ramdisk_combo -; \
+                  fi; \
+                  echo "Booting with ${boot_cmd} command..."; \
+                  ${boot_cmd} ${kernel_addr_r} ${ramdisk_combo} ${dtb_addr}; \
+              fi; \
+          else \
+              echo "No valid kernel image found"; \
+          fi;
+
 // eMMC/SDCard boot
 //##############################################################################
 set_mmc_args=setenv bootargs "${bootargs}" rootwait rootfstype=${mmc_rootfstype};
@@ -250,4 +318,3 @@ bootmenu_6="-------- Flash Options --------"=run flash_default
 bootmenu_7="recovery from usb"=run flash_from_usb
 bootmenu_8="recovery from mmc"=run flash_from_mmc
 bootmenu_9="recovery from net"=run flash_from_net
-
