--- a/drivers/video/spacemit/dsi/Makefile
+++ b/drivers/video/spacemit/dsi/Makefile
@@ -13,4 +13,5 @@ obj-y += video/lcd/lcd_icnl9951r.o
 obj-y += video/lcd/lcd_jd9365dah3.o
 obj-y += video/lcd/lcd_lt8911ext_edp_1080p.o
 obj-y += video/lcd/lcd_tc358762xbg_dpi.o
+obj-y += video/lcd/lcd_hxdm101.o
 
