--- a/board/spacemit/k1-x/k1-x.env
+++ b/board/spacemit/k1-x/k1-x.env
@@ -266,7 +266,7 @@ mmc_boot=echo "Try to boot from ${bootfs_devname}${boot_devnum} ..."; \
 nfs_boot=echo "Try to boot from NFS ..."; \
         run commonargs; \
         run add_bootarg; \
-        setenv bootargs "${bootargs}" root=/dev/nfs nfsroot=${serverip}:${rootfs_path} bootfs=${serverip}:${bootfs_path} ip=${ipaddr}:${serverip}:${gatewayip}:${netmask}::${netdev}:off noipath; \
+        setenv bootargs "${bootargs}" root=/dev/nfs net.ifnames=0 nfsroot=${serverip}:${rootfs_path} bootfs=${serverip}:${bootfs_path} ip=${ipaddr}:${serverip}:${gatewayip}:${netmask}::${netdev}:off noipath; \
         echo "bootargs: ${bootargs}"; \
         run detect_dtb; \
         echo "Loading kernel from NFS..."; \
