--- a/board/spacemit/k1-x/k1-x.env
+++ b/board/spacemit/k1-x/k1-x.env
@@ -1,6 +1,8 @@
 kernel_addr_r=0x08000000
 fdt_addr_r=0x46000000
 mmcdev=2
-
 bootargs=console=ttyS0,115200 root=/dev/mmcblk2p6 rootfstype=ext4 init=/sbin/init devtmpfs.mount=1 rootwait
 bootcmd=mmc dev ${mmcdev}; ext4load mmc ${mmcdev}:5 ${kernel_addr_r} Image; ext4load mmc ${mmcdev}:5 ${fdt_addr_r} spacemit/6.6.63/k1-x_MUSE-Pi-Pro.dtb; booti ${kernel_addr_r} - ${fdt_addr_r}
+ethaddr=00:11:22:33:44:55
+serial#=BPMIM102080640017
+ddr_cs_num=2
