--- a/configs/k1-x_tiny_defconfig
+++ b/configs/k1-x_tiny_defconfig
@@ -4,7 +4,7 @@
 #
 
 #
-# Compiler: riscv64-unknown-linux-gnu-gcc (g56971dcbea2) 14.3.0
+# Compiler: gcc (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0
 #
 CONFIG_CREATE_ARCH_SYMLINK=y
 CONFIG_SYS_CACHE_SHIFT_6=y
@@ -142,7 +142,7 @@ CONFIG_OF_BOARD_FIXUP=y
 CONFIG_LOCALVERSION="spacemit"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=140300
+CONFIG_GCC_VERSION=130300
 CONFIG_CLANG_VERSION=0
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 # CONFIG_CC_OPTIMIZE_FOR_SPEED is not set
@@ -468,14 +468,14 @@ CONFIG_SYS_XTRACE=y
 #
 # Info commands
 #
-CONFIG_CMD_BDI=y
+# CONFIG_CMD_BDI is not set
 # CONFIG_CMD_CONFIG is not set
-CONFIG_CMD_CONSOLE=y
+# CONFIG_CMD_CONSOLE is not set
 # CONFIG_CMD_CPU is not set
 # CONFIG_CMD_LICENSE is not set
 # CONFIG_CMD_PMC is not set
-CONFIG_CMD_TLV_EEPROM=y
-CONFIG_CMD_TLV_CUSTOM=y
+# CONFIG_CMD_TLV_EEPROM is not set
+# CONFIG_CMD_TLV_CUSTOM is not set
 CONFIG_CMD_SBI=y
 
 #
@@ -636,49 +636,12 @@ CONFIG_CMD_SETEXPR=y
 #
 # Android support commands
 #
-CONFIG_CMD_NET=y
-CONFIG_CMD_BOOTP=y
-CONFIG_CMD_DHCP=y
-# CONFIG_BOOTP_MAY_FAIL is not set
-CONFIG_BOOTP_BOOTPATH=y
-# CONFIG_BOOTP_VENDOREX is not set
-# CONFIG_BOOTP_BOOTFILESIZE is not set
-CONFIG_BOOTP_DNS=y
-# CONFIG_BOOTP_DNS2 is not set
-CONFIG_BOOTP_GATEWAY=y
-CONFIG_BOOTP_HOSTNAME=y
-# CONFIG_BOOTP_PREFER_SERVERIP is not set
-CONFIG_BOOTP_SUBNETMASK=y
-# CONFIG_BOOTP_NISDOMAIN is not set
-# CONFIG_BOOTP_NTPSERVER is not set
-# CONFIG_CMD_PCAP is not set
-CONFIG_BOOTP_PXE=y
-CONFIG_BOOTP_VCI_STRING="U-Boot"
-CONFIG_CMD_TFTPBOOT=y
-CONFIG_CMD_TFTPPUT=y
-CONFIG_CMD_TFTPSRV=y
-CONFIG_NET_TFTP_VARS=y
-# CONFIG_CMD_RARP is not set
-CONFIG_CMD_NFS=y
-CONFIG_NFS_TIMEOUT=2000
-CONFIG_SYS_DISABLE_AUTOLOAD=y
-# CONFIG_CMD_MII is not set
-# CONFIG_CMD_MDIO is not set
-CONFIG_CMD_PING=y
-# CONFIG_CMD_CDP is not set
-# CONFIG_CMD_SNTP is not set
-# CONFIG_CMD_DNS is not set
-# CONFIG_CMD_LINK_LOCAL is not set
-# CONFIG_CMD_ETHSW is not set
-CONFIG_CMD_PXE=y
-# CONFIG_CMD_WOL is not set
 
 #
 # Misc commands
 #
 # CONFIG_CMD_BSP is not set
 CONFIG_CMD_BLOCK_CACHE=y
-CONFIG_CMD_BUTTON=y
 # CONFIG_CMD_CACHE is not set
 # CONFIG_CMD_CONITRACE is not set
 # CONFIG_CMD_EFIDEBUG is not set
@@ -823,7 +786,6 @@ CONFIG_ENV_IS_NOWHERE=y
 # CONFIG_ENV_IS_IN_EXT4 is not set
 # CONFIG_ENV_IS_IN_FLASH is not set
 CONFIG_ENV_IS_IN_MMC=y
-CONFIG_ENV_IS_IN_NFS=y
 # CONFIG_ENV_IS_IN_NVRAM is not set
 # CONFIG_ENV_IS_IN_ONENAND is not set
 # CONFIG_ENV_IS_IN_REMOTE is not set
@@ -852,26 +814,7 @@ CONFIG_SPL_ENV_IS_IN_SPI_FLASH=y
 # CONFIG_USE_BOOTFILE is not set
 # CONFIG_USE_ETHPRIME is not set
 # CONFIG_VERSION_VARIABLE is not set
-CONFIG_NET=y
-CONFIG_ARP_TIMEOUT=200
-CONFIG_NET_RETRY_COUNT=50
-CONFIG_PROT_UDP=y
-# CONFIG_BOOTP_SEND_HOSTNAME is not set
-CONFIG_NET_RANDOM_ETHADDR=y
-# CONFIG_NETCONSOLE is not set
-CONFIG_IP_DEFRAG=y
-CONFIG_NET_MAXDEFRAG=65535
-# CONFIG_SYS_FAULT_ECHO_LINK_DOWN is not set
-CONFIG_TFTP_BLOCKSIZE=32768
-# CONFIG_TFTP_PORT is not set
-CONFIG_TFTP_WINDOWSIZE=1
-# CONFIG_TFTP_TSIZE is not set
-# CONFIG_SERVERIP_FROM_PROXYDHCP is not set
-CONFIG_SERVERIP_FROM_PROXYDHCP_DELAY_MS=100
-CONFIG_KEEP_SERVERADDR=y
-# CONFIG_UDP_CHECKSUM is not set
-CONFIG_BOOTP_SERVERIP=y
-CONFIG_BOOTP_MAX_ROOT_PATH_LEN=64
+# CONFIG_NET is not set
 CONFIG_SYS_RX_ETH_BUFFER=4
 
 #
@@ -940,9 +883,7 @@ CONFIG_BLOCK_CACHE=y
 #
 # Button Support
 #
-CONFIG_BUTTON=y
-# CONFIG_BUTTON_ADC is not set
-CONFIG_BUTTON_GPIO=y
+# CONFIG_BUTTON is not set
 
 #
 # Cache Controller drivers
@@ -1023,7 +964,6 @@ CONFIG_DMA_CHANNELS=y
 #
 CONFIG_FASTBOOT=y
 CONFIG_USB_FUNCTION_FASTBOOT=y
-# CONFIG_UDP_FUNCTION_FASTBOOT is not set
 CONFIG_FASTBOOT_BUF_ADDR=0x08000000
 CONFIG_FASTBOOT_BUF_SIZE=0x10000000
 CONFIG_FASTBOOT_USB_DEV=0
@@ -1357,98 +1297,13 @@ CONFIG_MTD_UBI_BEB_LIMIT=20
 # CONFIG_MULTIPLEXER is not set
 # CONFIG_BITBANGMII is not set
 # CONFIG_MV88E6352_SWITCH is not set
-CONFIG_PHYLIB=y
-# CONFIG_PHY_ADDR_ENABLE is not set
-# CONFIG_B53_SWITCH is not set
-# CONFIG_MV88E61XX_SWITCH is not set
-# CONFIG_PHYLIB_10G is not set
-# CONFIG_PHY_ADIN is not set
-# CONFIG_PHY_AQUANTIA is not set
-# CONFIG_PHY_ATHEROS is not set
-# CONFIG_PHY_BROADCOM is not set
-# CONFIG_PHY_CORTINA is not set
-# CONFIG_PHY_DAVICOM is not set
-# CONFIG_PHY_ET1011C is not set
-# CONFIG_PHY_LXT is not set
-# CONFIG_PHY_MARVELL is not set
-# CONFIG_PHY_MESON_GXL is not set
-# CONFIG_PHY_MICREL is not set
-# CONFIG_PHY_MSCC is not set
-# CONFIG_PHY_NATSEMI is not set
-# CONFIG_PHY_NXP_C45_TJA11XX is not set
-# CONFIG_PHY_NXP_TJA11XX is not set
-CONFIG_PHY_REALTEK=y
-# CONFIG_RTL8211X_PHY_FORCE_MASTER is not set
-# CONFIG_RTL8211F_PHY_FORCE_EEE_RXC_ON is not set
-# CONFIG_RTL8201F_PHY_S700_RMII_TIMINGS is not set
-# CONFIG_PHY_SMSC is not set
-# CONFIG_PHY_TERANETICS is not set
-# CONFIG_PHY_TI is not set
-# CONFIG_PHY_TI_DP83867 is not set
-# CONFIG_PHY_TI_DP83869 is not set
-# CONFIG_PHY_TI_GENERIC is not set
-# CONFIG_PHY_VITESSE is not set
-# CONFIG_PHY_XILINX is not set
-# CONFIG_PHY_XILINX_GMII2RGMII is not set
-# CONFIG_PHY_ETHERNET_ID is not set
-# CONFIG_PHY_FIXED is not set
-# CONFIG_PHY_NCSI is not set
 # CONFIG_FSL_MEMAC is not set
 CONFIG_PHY_RESET_DELAY=0
 # CONFIG_FSL_PFE is not set
 # CONFIG_BNXT_ETH is not set
 CONFIG_ETH=y
 CONFIG_DM_ETH=y
-# CONFIG_DM_MDIO is not set
 # CONFIG_DM_ETH_PHY is not set
-CONFIG_NETDEVICES=y
-# CONFIG_PHY_GIGE is not set
-# CONFIG_ALTERA_TSE is not set
-# CONFIG_BCM_SF2_ETH is not set
-# CONFIG_BCMGENET is not set
-# CONFIG_CALXEDA_XGMAC is not set
-# CONFIG_DRIVER_DM9000 is not set
-# CONFIG_DWC_ETH_QOS is not set
-CONFIG_E1000=y
-# CONFIG_E1000_NO_NVM is not set
-# CONFIG_E1000_SPI_GENERIC is not set
-# CONFIG_E1000_SPI is not set
-# CONFIG_CMD_E1000 is not set
-# CONFIG_EEPRO100 is not set
-# CONFIG_ETH_DESIGNWARE is not set
-# CONFIG_ETH_DESIGNWARE_MESON8B is not set
-# CONFIG_ETHOC is not set
-# CONFIG_FTMAC100 is not set
-# CONFIG_FTGMAC100 is not set
-# CONFIG_MCFFEC is not set
-# CONFIG_FSLDMAFEC is not set
-# CONFIG_KS8851_MLL is not set
-# CONFIG_MACB is not set
-# CONFIG_NET_NPCM750 is not set
-# CONFIG_PCH_GBE is not set
-# CONFIG_RGMII is not set
-# CONFIG_MII is not set
-# CONFIG_RMII is not set
-# CONFIG_PCNET is not set
-# CONFIG_QE_UEC is not set
-# CONFIG_RTL8139 is not set
-# CONFIG_RTL8169 is not set
-# CONFIG_SMC911X is not set
-# CONFIG_SUN7I_GMAC is not set
-# CONFIG_SUN4I_EMAC is not set
-# CONFIG_SUN8I_EMAC is not set
-# CONFIG_SH_ETHER is not set
-# CONFIG_DRIVER_TI_CPSW is not set
-# CONFIG_DRIVER_TI_EMAC is not set
-# CONFIG_DRIVER_TI_KEYSTONE_NET is not set
-CONFIG_SPACEMIT_K1X_EMAC=y
-# CONFIG_TULIP is not set
-# CONFIG_XILINX_AXIEMAC is not set
-# CONFIG_XILINX_EMACLITE is not set
-# CONFIG_ZYNQ_GEM is not set
-# CONFIG_TSEC_ENET is not set
-# CONFIG_MEDIATEK_ETH is not set
-# CONFIG_HIGMACV300_ETH is not set
 CONFIG_NVME=y
 # CONFIG_NVME_APPLE is not set
 CONFIG_NVME_PCI=y
@@ -1908,7 +1763,6 @@ CONFIG_USB_GADGET_DOWNLOAD=y
 # CONFIG_USB_FUNCTION_SDP is not set
 # CONFIG_USB_FUNCTION_THOR is not set
 # CONFIG_USB_FUNCTION_ACM is not set
-# CONFIG_USB_ETHER is not set
 # CONFIG_USB_SET_SERIAL_NUMBER is not set
 
 #
@@ -2040,7 +1894,7 @@ CONFIG_IMAGE_SPARSE=y
 CONFIG_IMAGE_SPARSE_FILLBUF_SIZE=0x80000
 CONFIG_IMAGE_SPARSE_TRANSFER_BLK_NUM=0x3000
 CONFIG_SYS_HZ=1000
-CONFIG_PRINT_TIMESTAMP=y
+# CONFIG_PRINT_TIMESTAMP is not set
 # CONFIG_SPL_USE_TINY_PRINTF is not set
 # CONFIG_PANIC_HANG is not set
 CONFIG_REGEX=y
